--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # History files
 .Rhistory
-
 # Example code in package build process
 *-Ex.R
-
 # R data files from past sessions
 .Rdata
+.Rproj.user
+UCI HAR Dataset
+coursera-clean-data.Rproj
+accelerometers.zip
